# Diploma_MIPT

./: .env.example  .gitignore  DIPLOMNAYA_RABOTA_TEKST.docx  DIPLOMNAYA_RABOTA_TEKST.txt  DIPLOM_MS_WORD_DORABOTKA.txt  Makefile  PROEKT_POLNOE_OPISANIE_I_NAUCHNAYA_CHAST.txt  PROJECT_CONTEXT.md  README.md  allProject_forAI_Test.txt  diploma.txt  load_menu_to_chroma.py  mcd.json  menu_search.py  my_dump.txt  profiles_1000.json  pyproject.toml  pytest.ini  requirements.txt  start.md  test_menu_search.py
_test_chroma/: chroma.sqlite3
_test_chroma2/: chroma.sqlite3
docs/: ARCHITECTURE.md  architecture_rag_visual.html  menu_graph_rag.html  menu_graph_rag.mmd  menu_graph_rag_data.json  profile_decision_graph.mmd  profile_decision_graph_rows.json
mcd_voice/: __init__.py  config.py
questions/: allergy_questions.json  diet_questions.json  group_questions.json  lexical_questions.json  mixed_questions.json  simple_questions.json
scripts/: _bootstrap.py  agents_demo.py  analyze_question_experiments.py  apply_llm_mode.py  audit_history_llm_judge.py  compare_rag.py  dialog_demo.py  experiment_run_layout.py  export_all_project_for_ai.py  export_architecture_diagram_pdfs.py  export_diploma_docx.py  generate_dataset.py  generate_profiles.py  load_chroma.py  menu_search_demo.py  merge_dialog_histories.py  profile_demo.py  rejudge_group_experiments.py  repair_group_experiment_nulls.py  run_all_reports.py  run_experiment.sh  run_question_experiment.py  run_ragas_question_metrics.py  sum_boost_experiment_tables.py  test_menu_search.py  visualize_menu_graph.py  (+2 more)
(+3763 files in other folders)
