[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mcd-voice-diploma"
version = "0.1.0"
description = "RAG menu + REG profiles + LLM dialog (diploma)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "chromadb>=0.4.0",
  "sentence-transformers>=2.2.0",
  "openai>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
filterwarnings = [
  "ignore::DeprecationWarning:chromadb.*",
]
